--- a/Client/Pages/Home.razor
+++ b/Client/Pages/Home.razor
@@ -2,4 +2,6 @@
 
 <h1>Andrzej Herman</h1>
 Nr albumu: 666666
-<Napis Kolor="red" />
+
+<h4>Dzisiaj jest: @DateTime.UtcNow.ToLocalTime().ToLongDateString()</h4>
+
